--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -15,4 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pobop"
           heroku_email: "friendlysquidsoftware@gmail.com"
-          subfolder: "server"
+          appdir: "server"
