--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -16,3 +16,4 @@ jobs:
           heroku_app_name: "pobop"
           heroku_email: "friendlysquidsoftware@gmail.com"
           appdir: "server"
+          buildpack: "https://github.com/heroku/heroku-buildpack-python.git"
