--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PoBop">
+        <activity android:name=".AuthenticationActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
