--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
 }
