--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Build debug APK
         run: |
           cd android
+          chmod +x ./gradlew
           ./gradlew assembleDebug --stacktrace
       - name: Upload APK
         uses: actions/upload-artifact@v1
