--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,7 @@ android {
 dependencies {
     implementation "androidx.room:room-runtime:2.2.6"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     annotationProcessor "androidx.room:room-compiler:2.2.6"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
