--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name=".RegistrationActivity"
             android:launchMode="singleInstance" />
-        <activity android:name=".ui.RecipeDetailsActivity"
+        <activity android:name=".ui.recipe.details.RecipeDetailsFragment"
             android:launchMode="singleInstance"/>
 
         <activity android:name=".SplashActivity">
